--- a/styles/animations.css
+++ b/styles/animations.css
@@ -1,14 +1,49 @@
-/* Опишите в этом файле все keyframes для проекта и стили анимаций иконки Like.
+/* Heart icon*/
 
-Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
-✦ theme-dark — класс тёмной темы
-✦ theme-light — класс светлой темы
-✦ like-icon — для svg-иконки анимированного сердца
-✦ card__like-button — для кнопки Like рядом с иконкой
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
-✦ button__text — для обозначения текстового элемента внутри кнопки
+.contour {
+  fill: var(--accent-color, #000);
+}
 
-Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
-*/
+.main-body {
+  fill: var(--color-none-body-heart);
+  transition: fill .3s linear;
+}
+
+.core {
+  fill: var(--color-none-body-heart);
+  transition: fill .3s linear .03s;
+}
+
+.sparks {
+  fill: var(--color-body-heart);
+  opacity: 0;
+}
+
+@keyframes heart {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.5);
+  }
+}
+
+@keyframes sparks {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/*  Menu marker */
+
+@keyframes marker {
+  from {
+    transform: translate(0);
+  }
+  to {
+    transform: translate(4px);
+  }
+}
