--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,18 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --main-font-family: "Inter", sans-serif;
+  --accent-font-family: "PressStart2P", fantasy;
+  --main-font-weight: 400;
+  --title-font-weight: 700;
+
+  --background-color: #fff;
+  --accent-color: #000;
+  --button-text-color: #fff;
+
+  --background-image: 
+    repeating-linear-gradient(to right, #d3d3d3 0 2px, rgba(0, 0, 0, 0) 2px 4px),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, rgba(0, 0, 0, 0) 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 .01%, #1a1a1a);
+
+    --color-body-heart: #ff0000;
+    --color-none-body-heart: rgba(255, 0, 0, 0); 
+}
