--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
   min-block-size: 100dvb;
   padding-block-start: 100px;
   font-family: var(--main-font-family, "Inter", sans-serif), sans-serif;
-  font-variation-settings: 'wgth' var(--main-font-weight);
+  font-variation-settings: 'wght' var(--main-font-weight, 400);
   background-color: var(--background-color, #fff);
   background-image: var(--background-image);
   background-size: cover;
@@ -112,7 +112,7 @@
 .card-title {
   font-size: 18px;
   line-height: 1.21;
-  font-variation-settings: "wgth" var(--title-font-weight, 700);
+  font-variation-settings: "wght" var(--title-font-weight, 700);
 }
 
 .card-wrapper {
