--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,6 @@
 .main {
   display: grid;
   justify-items: center;
-  gap: 57px;
 }
 
 .header-logo {
@@ -279,18 +278,14 @@
   mix-blend-mode: difference;
 }
 
-.footer {
-  display: grid;
-  justify-content: center;
-  padding: 52px 0 103px;
-}
-
 .button-save {
   display: flex;
-  inline-size: 340px;
+  inline-size: 335px;
   block-size: 55px;
   align-items: center;
   justify-content: center;
+  margin-block-start: 50px;
+  margin-block-end: 103px;
 }
 
 .floppy_image {
@@ -346,6 +341,8 @@
     justify-content: space-evenly;
     inline-size: 306px;
     block-size: 84px;
+    margin-block-start: 52px;
+    margin-block-end: 100px;
   }
   
   .modal {
