--- a/styles/style.css
+++ b/styles/style.css
@@ -286,7 +286,8 @@
 
 .button-save {
   display: flex;
-  inline-size: 335px;
+  gap: 8px;
+  inline-size: 339px;
   min-block-size: 55px;
   align-items: center;
   justify-content: center;
@@ -296,28 +297,26 @@
 
 .floppy_image {
   inline-size: 21px;
-  block-size: 21px;
-  margin-inline-end: 8px;
-  stroke: var(--button-text-color, #fff);
+  color: var(--button-text-color, #000);
   mix-blend-mode: difference;
 }
 
 /* Modal */
 
 .modal {
+  max-inline-size: 357px;
+  padding: 30px;
   border: 2px solid var(--accent-color, #000);
-  padding: 25px 30px;
   color: var(--accent-color, #000);
   font-family: var(--accent-font-family, fantasy), fantasy;  
   line-height: 1.5;
   text-transform: uppercase;
-  background-color: var(--background-color, #fff);
-  max-inline-size: 357px;
+  background-color: var(--background-color, #fff);  
 }
 
 .modal[open] {
-  display: grid;
-  grid-template-rows: repeat(2, min-content);
+  display: flex;
+  flex-direction: column;
   gap: 30px;
 }
 
@@ -328,36 +327,35 @@
 
 .modal__content {
   display: flex;
+  font-size: 14px;
   align-items: center;
-  gap: 16px;
+  gap: 20px;
 }
 
 .modal__icon {
-  stroke: var(--accent-color, #000);
   inline-size: 39px;
-  block-size: 39px;
   flex-shrink: 0;
 }
 
 .modal__button {
   inline-size: 100%;
-  block-size: 38px;
+  min-block-size: 38px;
   text-transform: uppercase;
 }
 
 @media (width <= 375px) {
   .button-save {
     flex-direction: column;
-    justify-content: space-evenly;
-    inline-size: 306px;
-    block-size: 84px;
+    justify-content: center;
+    inline-size: 310px;
+    min-block-size: 84px;
     margin-block-start: 52px;
     margin-block-end: 100px;
   }
   
   .modal {
-    max-inline-size: 342px;
-    padding: 30px 42px;
+    max-inline-size: 341px;
+    padding: 30px 40px;
   }
 
   .floppy_image {
